fix overflow

--- a/src/screens/campaign/Campaign.css
+++ b/src/screens/campaign/Campaign.css
@@ -4,13 +4,13 @@
 }
 
 .top {
-  padding: 1.5rem 0 0 0;
+  padding: 1.5rem 5.3rem  0 0;
   position: fixed;
   margin-left: 22%;
   margin-bottom: 2rem;
   background-color: #fff;
   border-bottom: 2px solid #f0f4f4;
-  width: 76%;
+  width: calc(100% - 22%);
 }
 .top-search {
   margin-left: 5.4rem;
